SIMPLE MESH MODEL

--- a/car_race.html
+++ b/car_race.html
@@ -225,6 +225,8 @@ The fragment shader is the same simple one.
 
 <!-- Creating the scene models -->
 
+<!-- <script type="text/javascript" src="objReader.js"></script> -->
+
 <script type="text/javascript" src="sceneModels.js"></script>
 
 <!-- WebGL code -->
