CAR MODEL CREATED (NEED FUNCTION TO READ IT ON PAGE LOAD)

--- a/car_race.html
+++ b/car_race.html
@@ -225,7 +225,7 @@ The fragment shader is the same simple one.
 
 <!-- Creating the scene models -->
 
-<!-- <script type="text/javascript" src="objReader.js"></script> -->
+<script type="text/javascript" src="objReader.js"></script>
 
 <script type="text/javascript" src="sceneModels.js"></script>
 
@@ -254,6 +254,10 @@ The fragment shader is the same simple one.
 		<p id="fps"> fps: </p>
 
 		<p id="car_speed">SPEED: 10 KPH</p>
+
+		<p>Read a 3D model from a <b>OBJ file</b>:
+		
+		<input type="file" id="obj-file" name="file">
         
         <p>Choose the <b>rendering mode</b>:
 		
