ADDED START KEY & SET DEFAULT GL.TRIANGLES

--- a/car_race.html
+++ b/car_race.html
@@ -248,6 +248,8 @@ The fragment shader is the same simple one.
 		<p id="score">SCORE: 0</p>
 
 		<canvas id="my-canvas" style="border:1px; background: url('textures/grass-sky-bg.jpg');" width="600" height="448"></canvas>
+
+		<p><b>PRESS SPACE TO START!</b></p>
 		
 		<!-- NEW --- To show the number of frames per second -->
 		
@@ -255,18 +257,12 @@ The fragment shader is the same simple one.
 
 		<p id="car_speed">SPEED: 10 KPH</p>
 
-		<p>Read a 3D model from a <b>OBJ file</b>:
+		<p>Select car.obj from models/car.obj:
 		
 		<input type="file" id="obj-file" name="file">
+
+		</p>
         
-        <p>Choose the <b>rendering mode</b>:
-		
-        <select id="rendering-mode-selection">
-			<option value="0">Filled Triangles</option>
-			<option value="1">Wireframe</option>
-			<option value="2">Vertices</option>
-        </select>
-        				
 	</div>
 
 </body>
